--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,3 +2,16 @@
   text-align: center;
 }
 
+#button-tweeter {
+  border-radius: 30%;
+}
+
+#page {
+  flex-direction: row
+}
+
+#content {
+  justify-content: center;
+  flex: column;
+  padding: 20vh
+}
