--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,11 +8,23 @@
 
 #page {
   flex-direction: row;
-  display: flex
+  display: flex;
+  color: white;
+  background-color: black
 }
 
 #content {
   justify-content: center;
   flex: column;
-  padding: 20vh
+  padding: 0
+}
+
+#banner {
+  display: flex;
+  width: 100%;
+  height: 30vh
+}
+
+li {
+  list-style: none;
 }
