--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,24 +1,59 @@
-.card{
-    background-color: #3f3838 !important;
-    height: 150vh;
-}
-
-.cards {
-    display: grid;
-    flex-direction: column;
+.card-container {
+    display: flex;
     justify-content: center;
+    align-items: center;
+    padding-top: 50px;
+}
+
+.card {
+    width: 500px;
+    margin: 20px;
+    border-radius: 15px;
+    background-color: rgb(62, 62, 62);
+    height: 80vh;
 
 }
-.card-section {
-    padding: 20px;
-    border: 2px solid black;
-    border-radius: 5px;
-    background: black;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-    color: white;
-    padding: 15px;
-    font-size: 20px;
+
+.card-image img {
+    max-width: 100px;
+    max-height: 100px;
+    border-radius: 15px;
+}
+
+.card p {
+    padding: 10px;
+}
+
+.card-title h2 {
+    padding: 10px;
     text-align: center;
-    width: 300px;
-    height: 300px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-family: 1rem;
+}
+
+.card a {
+    padding: 15px 20px;
+    color: black;
+    display: block;
+    text-align: center;
+    border: 1px solid black;
+    margin: 20px 50px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.identify form {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.identify input {
+    width: 230px;
+    padding: 7px;
+    margin: 5px;
+    border-radius: 5px;
+    border-color: rgb(6, 173, 215);
 }
